[project]
name = "rag-document-qa"
version = "0.1.0"
description = "Multi-Document RAG System with Conversational Memory"
requires-python = "==3.12.*"

dependencies = [
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langchain-text-splitters==0.2.4",
    "langchain-groq>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "rank-bm25>=0.2.2",
]
